Added Instance Editor

--- a/temecom-ai-ui/translations/en-us.yaml
+++ b/temecom-ai-ui/translations/en-us.yaml
@@ -22,9 +22,12 @@ route:
     seed: "Random Seed"
     updater: "Updater"
     optimizationAlgorithm: "Optimization Algorithm"
-  instances: 
+  instance: 
     title: "Instances"
     instance: "Instance"
+  instanceStatus:
+    title: "Instance Statuses"
+    instanceStatus: "Instance Status"
   layers: 
     title: "Layers"
     layer: "Layer"
