--- a/temecom-ai-ui/translations/en-us.yaml
+++ b/temecom-ai-ui/translations/en-us.yaml
@@ -7,6 +7,7 @@ route:
     save: "Save"
     new: "New"
     delete: "Delete"
+    add: "Add"
     userName: "User Name"
   dashboard:
     title: "Dashboard"
