Fixed LayerType controller Added LayerType to Layer Editor

--- a/temecom-ai-ui/translations/en-us.yaml
+++ b/temecom-ai-ui/translations/en-us.yaml
@@ -38,6 +38,7 @@ route:
     numberOfInputs: "Number of Inputs"
     numberOfOutputs: "Number of Outputs"
     activation: "Activation"
+    type: "Layer Type"
   weightInitialization:
     title: "Weight Initializations"
     weightInitialization: "Weight Initialization"
